<resources>
    <string name="app_name">LiveField</string>
    <string name="guide_btn">立刻体验</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_content_bottom_home_text">首页</string>
    <string name="main_content_bottom_news_text">新闻中心</string>
    <string name="main_content_bottom_smart_text">智慧服务</string>
    <string name="main_content_bottom_gov_text">政务</string>
    <string name="main_content_bottom_setting_text">设置</string>
    <string name="title_bar_text">标题</string>
    <string name="home_pager_title">LiveField</string>
</resources>
